New Activity List designs incorporated into latest FTF phase prototypes

--- a/app/views/ftf/_includes/activity-list_task-section_apply.html
+++ b/app/views/ftf/_includes/activity-list_task-section_apply.html
@@ -56,7 +56,7 @@
 
         <li class="govuk-task-list__item govuk-task-list__item--with-link">
           <div class="govuk-task-list__name-and-hint">
-            <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-1-status">Download application forms</a>
+            <a class="govuk-link govuk-task-list__link" href="../../application/v3-0/download2" aria-describedby="application-1-status">Download application forms</a>
           </div>
           <div class="govuk-task-list__status" id="application-1-status">
             <strong class="govuk-tag govuk-tag--blue">
@@ -112,7 +112,7 @@
 
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-2-status">Upload application forms and evidence</a>
+          <a class="govuk-link govuk-task-list__link" href="../../application/v3-0/upload?01=n&02=n&03=n&04=n&05=n&06=n&07=n&08=n&09=n&10=n" aria-describedby="application-2-status">Upload application forms and evidence</a>
         </div>
         <div class="govuk-task-list__status" id="application-2-status">
           <strong class="govuk-tag govuk-tag--blue">
@@ -215,7 +215,7 @@
 
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-3-status">Check your business details</a>
+        <a class="govuk-link govuk-task-list__link" href="../../application/v3-0/check" aria-describedby="application-3-status">Check your business details</a>
       </div>
       <div class="govuk-task-list__status" id="application-3-status">
         <strong class="govuk-tag govuk-tag--blue">
@@ -271,7 +271,7 @@
 
   <li class="govuk-task-list__item govuk-task-list__item--with-link">
     <div class="govuk-task-list__name-and-hint">
-      <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="application-4-status">Submit application</a>
+      <a class="govuk-link govuk-task-list__link" href="../../application/v3-0/submit" aria-describedby="application-4-status">Submit application</a>
     </div>
     <div class="govuk-task-list__status" id="application-4-status">
       <strong class="govuk-tag govuk-tag--blue">
