--- a/app/views/ftf/_includes/activity-list_task-section_eoi.html
+++ b/app/views/ftf/_includes/activity-list_task-section_eoi.html
@@ -16,7 +16,7 @@
     </li>
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="expression-of-interest-2-status">Check your business and personal details</a>
+        <a class="govuk-link govuk-task-list__link" href="../../eoi/v2-0/p-details.html" aria-describedby="expression-of-interest-2-status">Check your business and personal details</a>
       </div>
       <div class="govuk-task-list__status" id="expression-of-interest-2-status">
         <strong class="govuk-tag govuk-tag--blue">
@@ -34,7 +34,7 @@
     </li>
   </ul>
 
-  {% elif (data['eoi'] == "02") %}  <!-- EOI Scenario 2 -->
+  {% elif (data['eoi'] == "02a") %}  <!-- EOI Scenario 2 -->
   <h2 class="govuk-prototype-kit-task-list__section">
     <span class="govuk-prototype-kit-task-list__section-number">1. </span> Expression of interest
   </h2>
@@ -66,6 +66,40 @@
       Cannot start yet
     </div>
   </li>
+</ul>
+
+{% elif (data['eoi'] == "02b") %}
+<h2 class="govuk-prototype-kit-task-list__section">
+  <span class="govuk-prototype-kit-task-list__section-number">1. </span> Expression of interest
+</h2>
+
+<ul class="govuk-task-list">
+<li class="govuk-task-list__item govuk-task-list__item--with-link">
+  <div class="govuk-task-list__name-and-hint">
+    <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="expression-of-interest-1-status">Check eligibility and scoring</a>
+  </div>
+  <div class="govuk-task-list__status" id="expression-of-interest-1-status">
+    Completed
+  </div>
+</li>
+<li class="govuk-task-list__item govuk-task-list__item--with-link">
+  <div class="govuk-task-list__name-and-hint">
+    <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="expression-of-interest-2-status">Check your business and personal details</a>
+  </div>
+  <div class="govuk-task-list__status" id="expression-of-interest-2-status">
+      Completed
+  </div>
+</li>
+<li class="govuk-task-list__item govuk-task-list__item--with-link">
+  <div class="govuk-task-list__name-and-hint">
+    <a class="govuk-link govuk-task-list__link" href="../../eoi/v2-0/submit.html" aria-describedby="expression-of-interest-2-status">Register your interest</a>
+  </div>
+  <div class="govuk-task-list__status" id="expression-of-interest-2-status">
+    <strong class="govuk-tag govuk-tag--blue">
+      Not yet started
+    </strong>
+  </div>
+</li>
 </ul>
 
       {% elif (data['eoi'] == "03a") %}  <!-- EOI Scenario 3a -->
