--- a/app/views/ftf/activity-list/v3-0/index.html
+++ b/app/views/ftf/activity-list/v3-0/index.html
@@ -1,4 +1,4 @@
-{% extends "layouts/main-agreement-round-2.html" %}
+{% extends "layouts/main-end-to-end.html" %}
 
 {% block pageTitle %}
 Water Management Grant - Round 3
