--- a/app/views/ftf/agreement/v2-0/agreement-detail.html
+++ b/app/views/ftf/agreement/v2-0/agreement-detail.html
@@ -15,7 +15,7 @@ Agreement details
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
 
-        <form method="post" action="review-terms-and-conditions">
+        <form method="post" action="../../activity-list/v3-0/index?status=03&eoi=03b&apply=03b&agree=02b&claim-01=01&claim-02=0&claim-03=0">
 
         <span class="govuk-caption-xl">Sign agreement</span>
         <h1 class="govuk-heading-xl">Your grant funding agreement</h1>
@@ -54,7 +54,7 @@ Agreement details
 
 
           {{govukButton({
-              text: "Continue to terms and conditions"
+              text: "Continue"
           })}}
         
         </form>
