--- a/app/views/ftf/agreement/v2-0/index.html
+++ b/app/views/ftf/agreement/v2-0/index.html
@@ -160,7 +160,7 @@
             You must read and accept the agreement by 11:59pm on <strong>31 May 2024</strong> or the offer will expire and we cannot award you a grant.<br><br>
             
 
-              <a href="activity?03-02=ready">Read and accept your grant funding agreement</a>
+              <a href="login">Read and accept your grant funding agreement</a>
 
               <br><br>
                         
