--- a/app/views/ftf/agreement/v2-0/login.html
+++ b/app/views/ftf/agreement/v2-0/login.html
@@ -75,7 +75,7 @@
       <br>
 
 
-      <a href="../../activity-list/v3-0/index?status=01a&eoi=01&apply=01&agree=01&claim-01=01&claim-02=0&claim-03=0">
+      <a href="../../activity-list/v3-0/index?status=03&eoi=03b&apply=03b&agree=02a&claim-01=01&claim-02=0&claim-03=0">
         <button class="govuk-button" data-module="govuk-button" style="margin-bottom: 40px;">
           Continue
         </button>
