--- a/app/views/ftf/agreement/v2-0/review-terms-and-conditions.html
+++ b/app/views/ftf/agreement/v2-0/review-terms-and-conditions.html
@@ -15,7 +15,7 @@ Review terms and conditions
     <div class="govuk-grid-row">
       <div class="govuk-grid-column-two-thirds">
 
-        <form method="post" action="accept-grant-funding-agreement">
+        <form method="post" action="../../activity-list/v3-0/index?status=03&eoi=03b&apply=03b&agree=02d&claim-01=01&claim-02=0&claim-03=0">
 
 
         <span class="govuk-caption-xl">Sign agreement</span>
@@ -39,7 +39,7 @@ Review terms and conditions
         </div>
 
           {{govukButton({
-              text: "Continue"
+              text: "Save and continue"
           })}}
         
           <span class="content-section">
