--- a/app/views/ftf/application/v3-0/check.html
+++ b/app/views/ftf/application/v3-0/check.html
@@ -174,7 +174,7 @@
 
 <br><br>
 
-      <a href="activity3?02-04=ready">
+      <a href="../../activity-list/v3-0/index?status=02b&eoi=03b&apply=02e&agree=01&claim-01=01&claim-02=0&claim-03=0">
         <button class="govuk-button" data-module="govuk-button">
           Continue
         </button>
