--- a/app/views/ftf/application/v3-0/confirmation.html
+++ b/app/views/ftf/application/v3-0/confirmation.html
@@ -111,7 +111,7 @@
 
 
        <p class="govuk-body">
-        <a href="activity4">Go back to the task list</a></p>
+        <a href="../../activity-list/v3-0/index?status=02c&eoi=03b&apply=03a&agree=01&claim-01=01&claim-02=0&claim-03=0">Go back to the task list</a></p>
        </p>
 
        
