--- a/app/views/ftf/application/v3-0/download2.html
+++ b/app/views/ftf/application/v3-0/download2.html
@@ -101,7 +101,7 @@
 <br><br>
 
 
-      <a href="activity1b?02-01=complete">
+      <a href="email2">
         <button class="govuk-button">
           Continue
         </button>
