--- a/app/views/ftf/application/v3-0/financial/financial3a.html
+++ b/app/views/ftf/application/v3-0/financial/financial3a.html
@@ -111,11 +111,24 @@
 </main>
 
 
-<a href="../upload?01=c&02=c&03=n&04=n&05=n&06=n&07=n&08=n&09=n&10=n">
+<!-- TEMP Link added for E2E testing -->
+
+<a href="../summary?progress=notsubmitted">
   <button class="govuk-button">
     Continue
   </button>
 </a>
+
+
+<!--
+  NOTE: Link for full upload design journey hidden temporarily for E2E testing 02/02/2024
+  
+  <a href="../upload?01=c&02=c&03=n&04=n&05=n&06=n&07=n&08=n&09=n&10=n">
+  <button class="govuk-button">
+    Continue
+  </button>
+</a>
+-->
 
 
 
