--- a/app/views/ftf/application/v3-0/index.html
+++ b/app/views/ftf/application/v3-0/index.html
@@ -165,7 +165,7 @@
             <strong>What you need to do</strong><br><br>
 
 
-            <a href="activity1?02-01=ready">Download the Word application form and Excel appendix</a>
+            <a href="login">Download the Word application form and Excel appendix</a>
 
             <br><br>
 
