--- a/app/views/ftf/claim/v3-0/confirmation.html
+++ b/app/views/ftf/claim/v3-0/confirmation.html
@@ -79,7 +79,7 @@
 
 
        <p class="govuk-body">
-        <a href="activity4.html">Go back to task list</a></p>
+        <a href="../../activity-list/v3-0/index?status=05&eoi=03b&apply=03b&agree=03&claim-01=03&claim-02=02a&claim-03=01">Go back to task list</a></p>
        </p>
 
        
