--- a/app/views/ftf/claim/v3-0/index.html
+++ b/app/views/ftf/claim/v3-0/index.html
@@ -157,7 +157,7 @@
 
             <strong>What you need to do</strong><br><br>
 
-            <a href="activity1?04-01=ready">Download claim form</a>
+            <a href="login">Download claim form</a>
 
               <br><br>
 
