--- a/app/views/ftf/eoi/v2-0/confirmation.html
+++ b/app/views/ftf/eoi/v2-0/confirmation.html
@@ -94,7 +94,7 @@
 
 
        <p class="govuk-body">
-        <a href="activity3.html">Go back to task list</a></p>
+        <a href="../../activity-list/v3-0/index?status=01b&eoi=03a&apply=01&agree=01&claim-01=01&claim-02=0&claim-03=0">Go back to task list</a></p>
        </p>
 
        
