--- a/app/views/ftf/_includes/activity-list_task-section_agreement.html
+++ b/app/views/ftf/_includes/activity-list_task-section_agreement.html
@@ -42,7 +42,7 @@
     <ul class="govuk-task-list">
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="agreement-1-status">Read agreement</a>
+          <a class="govuk-link govuk-task-list__link" href="../../agreement/v2-0/what-you-need-to-do" aria-describedby="agreement-1-status">Read agreement</a>
         </div>
         <div class="govuk-task-list__status" id="agreement-1-status">
           <strong class="govuk-tag govuk-tag--blue">
@@ -89,7 +89,7 @@
 
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="agreement-2-status">Read terms and conditions</a>
+          <a class="govuk-link govuk-task-list__link" href="../../agreement/v2-0/review-terms-and-conditions" aria-describedby="agreement-2-status">Read terms and conditions</a>
         </div>
         <div class="govuk-task-list__status" id="agreement-2-status">
           <strong class="govuk-tag govuk-tag--blue">
@@ -170,7 +170,7 @@
 
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="agreement-3-status">Sign and accept agreement</a>
+          <a class="govuk-link govuk-task-list__link" href="../../agreement/v2-0/accept-grant-funding-agreement" aria-describedby="agreement-3-status">Sign and accept agreement</a>
         </div>
         <div class="govuk-task-list__status" id="agreement-3-status">
           <strong class="govuk-tag govuk-tag--blue">
