--- a/app/views/ftf/_includes/activity-list_task-section_claim-01.html
+++ b/app/views/ftf/_includes/activity-list_task-section_claim-01.html
@@ -42,7 +42,7 @@
     <ul class="govuk-task-list">
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="claim-01-1-status">Download claim form</a>
+          <a class="govuk-link govuk-task-list__link" href="../../claim/v3-0/download" aria-describedby="claim-01-1-status">Download claim form</a>
         </div>
         <div class="govuk-task-list__status" id="claim-01-1-status">
           <strong class="govuk-tag govuk-tag--blue">
@@ -87,7 +87,7 @@
 
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="claim-01-2-status">Upload claim form and evidence</a>
+          <a class="govuk-link govuk-task-list__link" href="../../claim/v3-0/upload1" aria-describedby="claim-01-2-status">Upload claim form and evidence</a>
         </div>
         <div class="govuk-task-list__status" id="claim-01-2-status">
           <strong class="govuk-tag govuk-tag--blue">
@@ -168,7 +168,7 @@
 
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="claim-01-3-status">Submit claim</a>
+          <a class="govuk-link govuk-task-list__link" href="../../claim/v3-0/submit" aria-describedby="claim-01-3-status">Submit claim</a>
         </div>
         <div class="govuk-task-list__status" id="claim-01-3-status">
           <strong class="govuk-tag govuk-tag--blue">
