--- a/app/views/ftf/agreement/v2-0/agreement-accepted.html
+++ b/app/views/ftf/agreement/v2-0/agreement-accepted.html
@@ -39,7 +39,7 @@
         {% include "../../_includes/body-content_agreement-accepted-main-block.html" %}
 
           <br>
-        <p class="govuk-body"><a href="activity?03-02=complete">Go back to task list</a></p>
+        <p class="govuk-body"><a href="../../activity-list/v3-0/index?status=04&eoi=03b&apply=03b&agree=03&claim-01=02a&claim-02=01&claim-03=01">Go back to task list</a></p>
 
         
         </form>
