--- a/app/views/ftf/application/v3-0/summary.html
+++ b/app/views/ftf/application/v3-0/summary.html
@@ -486,7 +486,7 @@
 
 <br><br><br>
 
-      <a href="activity2?02-03=ready">
+      <a href="../../activity-list/v3-0/index?status=02b&eoi=03b&apply=02d&agree=01&claim-01=01&claim-02=0&claim-03=0">
         <button class="govuk-button" data-module="govuk-button">
           Continue
         </button>
