--- a/app/views/ftf/claim/v3-0/check.html
+++ b/app/views/ftf/claim/v3-0/check.html
@@ -121,7 +121,7 @@
 
 <br>
 
-      <a href="activity3.html">
+      <a href="../../activity-list/v3-0/index?status=04&eoi=03b&apply=03b&agree=03&claim-01=02d&claim-02=01&claim-03=01">
         <button class="govuk-button" data-module="govuk-button">
           Continue
         </button>
