--- a/app/views/ftf/claim/v3-0/download.html
+++ b/app/views/ftf/claim/v3-0/download.html
@@ -95,7 +95,7 @@
 <br><br>
 
 
-      <a href="activity1b">
+      <a href="../../activity-list/v3-0/index?status=04&eoi=03b&apply=03b&agree=03&claim-01=02b&claim-02=01&claim-03=01">
         <button class="govuk-button">
           Continue
         </button>
