--- a/app/views/ftf/eoi/v2-0/check.html
+++ b/app/views/ftf/eoi/v2-0/check.html
@@ -205,7 +205,7 @@
 
 
 
-      <a href="activity2">
+      <a href="../../activity-list/v3-0/index?status=01a&eoi=02b&apply=01&agree=01&claim-01=01&claim-02=0&claim-03=0">
         <button class="govuk-button" data-module="govuk-button">
           Continue
         </button>
