--- a/app/views/ftf/_includes/activity-list_task-section_eoi.html
+++ b/app/views/ftf/_includes/activity-list_task-section_eoi.html
@@ -166,7 +166,7 @@
       </li>
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
-          <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="expression-of-interest-4-status">Expression of interest outcome</a>
+          <a class="govuk-link govuk-task-list__link" href="../../eoi/v2-0/outcome-accepted.html" aria-describedby="expression-of-interest-4-status">Expression of interest outcome</a>
         </div>
         <div class="govuk-task-list__status" id="expression-of-interest-4-status">
           Accepted
@@ -206,7 +206,7 @@
     </li>
     <li class="govuk-task-list__item">
       <div class="govuk-task-list__name-and-hint">
-        <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="expression-of-interest-4-status">Expression of interest outcome</a>
+        <a class="govuk-link govuk-task-list__link" href="../../eoi/v2-0/outcome-not-accepted.html" aria-describedby="expression-of-interest-4-status">Expression of interest outcome</a>
       </div>
       <div class="govuk-task-list__status" id="expression-of-interest-4-status">
         Not accepted
