--- a/app/views/fetf/_includes/activity-list_task-section_claim.html
+++ b/app/views/fetf/_includes/activity-list_task-section_claim.html
@@ -8,14 +8,31 @@
     
     <ul class="govuk-task-list">
 
-      <li class="govuk-task-list__item">
+
+      <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
-          <div>Check claim details</div>
+          <a class="govuk-link govuk-task-list__link" href="../../claim/v1-0/claim-detail" aria-describedby="application-details-2-status">Check claim details</a>
         </div>
-        <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="application-details-3-status">
-          Cannot start yet
+        <div class="govuk-task-list__status" id="application-details-4-status">
+          <strong class="govuk-tag govuk-tag--blue">
+            Not yet started
+          </strong>
         </div>
       </li>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
       <li class="govuk-task-list__item">
         <div class="govuk-task-list__name-and-hint">
