--- a/app/views/fetf/claim/v1-0/slurry2.html
+++ b/app/views/fetf/claim/v1-0/slurry2.html
@@ -135,7 +135,7 @@ function showVisualEvidenceSection() {
 
 <p class="govuk-label govuk-label--m">Visual evidence</p>
 <p class="govuk-body">For example, photos and videos</p>
-<p class="govuk-body" style="color: #505A5F;">Supported file types are JPG, PNG, PDF or MP4. Maximum file size is 20MB.</p><br>
+<p class="govuk-body" style="color: #505A5F;">Supported file types are JPG, PNG, PDF, MOV or MP4. Maximum file size is 20MB.</p><br>
 
 
 <div id="visualEvidenceContainer" style="display: none;">
