E2E prototype - EOI and dates amends

--- a/app/views/ftf/eoi/v2-0/q2-project.html
+++ b/app/views/ftf/eoi/v2-0/q2-project.html
@@ -78,7 +78,7 @@
   
       
       
-        <a href="q3-permission">
+        <a href="q4-eligible">
           <button class="govuk-button" data-module="govuk-button" style="margin-bottom: 40px;">
             Continue
           </button>
