--- a/app/views/ftf/eoi/v2-0/q4-eligible.html
+++ b/app/views/ftf/eoi/v2-0/q4-eligible.html
@@ -216,7 +216,7 @@
       
            
       
-        <a href="q5-total">
+        <a href="q6-grant">
           <button class="govuk-button" data-module="govuk-button" style="margin-bottom: 40px;">
             Continue
           </button>
