--- a/app/views/ftf/eoi/v2-0/q8-crops.html
+++ b/app/views/ftf/eoi/v2-0/q8-crops.html
@@ -73,7 +73,7 @@
   
       
       
-        <a href="q9-farms">
+        <a href="score">
           <button class="govuk-button" data-module="govuk-button" style="margin-bottom: 40px;">
             Continue
           </button>
