--- a/app/views/ftf/index.html
+++ b/app/views/ftf/index.html
@@ -22,7 +22,7 @@
     <!-- <p class="govuk-body-l">Scenario: Read and sign your grant funding agreement</p> -->
 
     <p class="govuk-body"><strong>February 2024</strong> Awareness / Expression of Interest</p>
-    <p class="govuk-body"><a href="eoi/v2-0/index" target="_blank">Click to open protoype</a></p>
+    <p class="govuk-body"><a href="awareness/" target="_blank">Click to open protoype</a></p>
 
     <hr style="margin: 40px 0;">
     <p class="govuk-body"><strong>March 2024</strong> Application</p>
