--- a/app/views/ftf/monitoring/v1-0/index.html
+++ b/app/views/ftf/monitoring/v1-0/index.html
@@ -33,7 +33,7 @@
 
 <body style="font-family: Helvetica, Arial, sans-serif;font-size: 16px;margin: 0;color:#0b0c0c;">
 
-<span style="display: none;font-size: 1px;color: #fff; max-height: 0;">Your application for the Water Management Grant - Round 3 (Reference: WM-VMA-1234) has been approved.</span>
+<span style="display: none;font-size: 1px;color: #fff; max-height: 0;">Due 28 February 2026: Water Management Year 1 report</span>
 
   <table role="presentation" width="100%" style="border-collapse: collapse;min-width: 100%;width: 100% !important;" cellpadding="0" cellspacing="0" border="0">
     <tr>
@@ -126,7 +126,7 @@
         <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
 
 
-          <strong style="cursor: pointer;" onclick="navigateToPage()">Subject line:</strong> Submit your Water Management grant claim<br><br>
+          <strong style="cursor: pointer;" onclick="navigateToPage()">Subject line:</strong> Due 28 February 2026: Water Management Year 1 report<br><br>
 
           <script>
             function navigateToPage() {
@@ -145,8 +145,7 @@
             <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
               Dear John Smith,<br><br>
                           
-              Your Water Management grant claim is due by 11:59pm on <br>
-              <strong>29 November 2024</strong>.<br>
+              The deadline for your Year 1 report for the Water Management grant is <strong>30 March 2026</strong>.<br>
             </p>
 
 						
@@ -157,26 +156,9 @@
 
             <strong>What you need to do</strong><br><br>
 
-            <a href="login">Download claim form</a>
+            You need to check what <a href="/_common/not-testing.html">evidence you need to submit</a>.<br><br>
 
-              <br><br>
-
-            You need to check what evidence you must provide in the <a href="/_common/not-testing.html">Water Management grant manual</a>.<br><br>
-
-            You need evidence that each item you are claiming for:<br><br>
-
-              <li>has been purchased (for example, invoices)</li>
-              <li>has been paid for in full (for example, receipts and bank statements - you can cross out other transactions)</li>
-              <li>is in place and operational (for example, photos, videos)</li>
-
-              <br>
-
-              
-                        
-              When you are ready to submit your claim, <a href="/_common/not-testing.html">upload your claim form and evidence</a>.<br><br>
-
-            <strong>Warning: </strong> Do not upload handwritten and scanned copies or PDFs of this form.<br>
-
+            When you are ready, <a href="login">upload your Year 1 report.</a><br><br>
 
 
            <hr style="margin: 30px 0;">
@@ -187,8 +169,8 @@
 
        
             <div class="govuk-details__text">
-              <strong>If you have questions about your claim</strong><br><br>
-              If you have any questions about your claim or you cannot make the claim date, call the RPA and follow the options for the Farming Transformation Fund scheme.<br>
+              <strong>If you have questions about your report</strong><br><br>
+              If you have any questions about your report, call the RPA and follow the options for the Farming Transformation Fund scheme.<br>
 
 
 
@@ -200,7 +182,7 @@
               </p>
 
               <p class="govuk-body"><strong>Email</strong><br>
-              <a href="/_common/not-testing.html">GSClaimqueries@rpa.gov.uk</a></p>
+              <a href="/_common/not-testing.html">FTF@rpa.gov.uk</a></p>
             </div> 
   
            <br>
