--- a/app/views/ftf/eoi/v2-0/q1-farmer-type.html
+++ b/app/views/ftf/eoi/v2-0/q1-farmer-type.html
@@ -1,6 +1,6 @@
 {% extends "layouts/main-application-round-2.html" %}
 
-{% set pageName="Grant" %}
+{% set pageName="Status" %}
 
 {% block content %}
 
@@ -35,7 +35,7 @@
 
 
       <div class="govuk-grid-column-two-thirds">
-        <h2 class="govuk-heading-l">Potential grant funding</h2>
+        <h2 class="govuk-heading-l">Who are you?</h2> 
       
       
       
@@ -44,31 +44,32 @@
       
         <div class="govuk-form-group">
           <fieldset class="govuk-fieldset">
-            <p class="govuk-body">You may be able to apply for a grant of up to £80,000, based on the estimated cost of £200,000.</p>
+    
+            <div class="govuk-radios" data-module="govuk-radios">
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="whereDoYouLive" name="whereDoYouLive" type="radio" value="Sole trader">
+                <label class="govuk-label govuk-radios__label" for="whereDoYouLive">
+                  Farmer
+                </label>
+              </div>
+              <div class="govuk-radios__item">
+                <input class="govuk-radios__input" id="whereDoYouLive-2" name="whereDoYouLive" type="radio" value="scotland">
+                <label class="govuk-label govuk-radios__label" for="whereDoYouLive-2">
+                  Contractor
+                </label>
+              </div>
+            </div>
           </fieldset>
-
-          <div class="govuk-warning-text">
-            <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
-            <strong class="govuk-warning-text__text">
-              <span class="govuk-visually-hidden">Warning</span>
-              There is no guarantee the project will receive a grant.
-            </strong>
-          </div>
-
         </div>
+      
+      
+      <br>
       
       
   
       
-
-
-
-      <br>
-
-
-
-            
-        <a href="q8-crops">
+      
+        <a href="q2-project">
           <button class="govuk-button" data-module="govuk-button" style="margin-bottom: 40px;">
             Continue
           </button>
@@ -79,6 +80,7 @@
       </div>
      
       
+
     
     </div>
   </main>
