E2E Index page amends

--- a/app/views/ftf/index.html
+++ b/app/views/ftf/index.html
@@ -21,23 +21,23 @@
 
     <!-- <p class="govuk-body-l">Scenario: Read and sign your grant funding agreement</p> -->
 
-    <p class="govuk-body"><strong>February 2024</strong> Awareness / Expression of Interest</p>
+    <p class="govuk-body"><strong>January 2024</strong> Awareness / Expression of Interest</p>
     <p class="govuk-body"><a href="awareness/" target="_blank">Click to open protoype</a></p>
 
     <hr style="margin: 40px 0;">
-    <p class="govuk-body"><strong>March 2024</strong> Application</p>
+    <p class="govuk-body"><strong>May 2024</strong> Application</p>
     <p class="govuk-body"><a href="application/v3-0/" target="_blank">Click to open prototype</a></p>
     
     <hr style="margin: 40px 0;">
-    <p class="govuk-body"><strong>May 2024</strong> Agreement</p>
+    <p class="govuk-body"><strong>August 2024</strong> Agreement</p>
     <p class="govuk-body"><a href="agreement/v2-0/" target="_blank">Click to open prototype</a></p>
 
     <hr style="margin: 40px 0;">
-    <p class="govuk-body"><strong>May 2025</strong> Claim</p>
+    <p class="govuk-body"><strong>October 2024</strong> Claim</p>
     <p class="govuk-body"><a href="claim/v3-0/" target="_blank">Click to open prototype</a></p>
 
     <hr style="margin: 40px 0;">
-    <p class="govuk-body"><strong>Late 2026</strong> Monitoring</p>
+    <p class="govuk-body"><strong>February 2026</strong> Monitoring</p>
     <p class="govuk-body"><a href="monitoring/v1-0/" target="_blank">Click to open prototype</a></p>
 
   </div>
