--- a/app/views/ftf/index.html
+++ b/app/views/ftf/index.html
@@ -37,8 +37,17 @@
     <p class="govuk-body"><a href="claim/v3-0/" target="_blank">Click to open prototype</a></p>
 
     <hr style="margin: 40px 0;">
-    <p class="govuk-body"><strong>February 2026</strong> Monitoring</p>
+    <p class="govuk-body"><strong>February 2026</strong> Monitoring Year 1</p>
     <p class="govuk-body"><a href="monitoring/v1-0/" target="_blank">Click to open prototype</a></p>
+
+    <hr style="margin: 40px 0;">
+    <p class="govuk-body"><strong>February 2030</strong> Monitoring Year 5</p>
+    <p class="govuk-body"><a href="monitoring/v1-0_y5/" target="_blank">Click to open prototype</a></p>
+
+    <hr style="margin: 40px 0;">
+    <p class="govuk-body"><strong>Activity list</strong> Alternate designs</p>
+    <p class="govuk-body"><a href="activity-list/v3-0/index-design-variant-01?scenario=application&status=01a&eoi=01&apply=01&agree=01" target="_blank">Design variant 1</a></p>
+    <p class="govuk-body"><a href="activity-list/v3-0/index-design-variant-02?scenario=application&status=01a&eoi=01&apply=01&agree=01" target="_blank">Design variant 2</a></p>
 
   </div>
 </div>
