--- a/app/views/ftf/monitoring/v1-0_y5/index.html
+++ b/app/views/ftf/monitoring/v1-0_y5/index.html
@@ -5,7 +5,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta content="telephone=no" name="format-detection" /> <!-- need to add formatting for real phone numbers -->
   <meta name="viewport" content="width=device-width" />
-  <title>Water Management Grant - Round 3 (Reference: WM-VMA-1234) - Agreement ready to read and sign</title>
+  <title>Water Management Grant - Round 3 (Reference: WM-VMA-1234) - Year 5 reporting due</title>
 
   <style type="text/css">
     @media only screen and (min-device-width: 581px) {
@@ -33,7 +33,7 @@
 
 <body style="font-family: Helvetica, Arial, sans-serif;font-size: 16px;margin: 0;color:#0b0c0c;">
 
-<span style="display: none;font-size: 1px;color: #fff; max-height: 0;">Your application for the Water Management Grant - Round 3 (Reference: WM-VMA-1234) has been approved.</span>
+<span style="display: none;font-size: 1px;color: #fff; max-height: 0;">Due 30 March 2030: Water Management Year 5 report</span>
 
   <table role="presentation" width="100%" style="border-collapse: collapse;min-width: 100%;width: 100% !important;" cellpadding="0" cellspacing="0" border="0">
     <tr>
@@ -46,7 +46,7 @@
         <table role="presentation" width="100%" style="border-collapse: collapse;max-width: 580px;" cellpadding="0" cellspacing="0" border="0" align="center">
           <tr>
             <td width="70" bgcolor="#0b0c0c" valign="middle">
-              <a href="../../" title="Go to the GOV.UK homepage" style="text-decoration: none;">
+              <a href="https://www.gov.uk" title="Go to the GOV.UK homepage" style="text-decoration: none;">
                 <table role="presentation" cellpadding="0" cellspacing="0" border="0" style="border-collapse: collapse;">
                   <tr>
                     <td style="padding-left: 10px">
@@ -126,12 +126,12 @@
         <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
 
 
-          <strong style="cursor: pointer;" onclick="navigateToPage()">Subject line:</strong> Received: Water Management grant application<br><br>
+          <strong style="cursor: pointer;" onclick="navigateToPage()">Subject line:</strong> Due 30 March 2030: Water Management Year 5 report<br><br>
 
           <script>
             function navigateToPage() {
               // Replace 'page2.html' with the actual file or URL for page 2
-              window.location.href = 'email2.html';
+              window.location.href = '#';
             }
           </script>
           
@@ -143,41 +143,22 @@
           <br>      
      
             <p style="Margin: 0 0 20px 0; font-size: 19px; line-height: 25px; color: #0B0C0C;">
-              Dear John Smith,<br>
+              Dear John Smith,<br><br>
+                          
+              The deadline for your Year 5 report for the Water Management grant is <strong>30 March 2030</strong>.<br>
             </p>
-            
-            We have received your Water Management grant application.<br>
 
-
+						
             <hr style="margin: 30px 0;">
 
 
 
 
-            <strong>What happens next</strong><br><br>
+            <strong>What you need to do</strong><br><br>
 
-            The RPA aim to process complete applications within 60 working days.<br><br>
+            You need to check what <a href="/_common/not-testing.html">evidence you need to submit</a>.<br><br>
 
-            The RPA will be in touch when they have assessed your full application. They will tell you if your project scored well enough to receive grant funding.<br><br>
-       
-            The RPA will assess your application against other projects and value for money. You will not automatically get a grant. The grant is expected to be highly competitive and you are competing against other projects.<br><br>
-
-            If your application is successful, you’ll be sent a grant funding agreement and can begin work on the project.<br><br>
-
-            <strong>You must not start the project</strong><br><br>
-
-            Starting the project or committing to any costs (such as placing orders) before you receive a funding agreement will invalidate your application.<br><br>
-
-
-            Before you start the project, you can:<br><br>
-
-            <li>get quotes from suppliers</li>
-            <li>apply for planning permission or an abstraction licence</li>
-            <br><br>
-
-            <strong>Withdrawing your application</strong><br><br>
-
-            If you do not want the grant funding, you can <a href="/_common/not-testing.html">withdraw your application</a> before you make a claim.<br>
+            When you are ready, <a href="login">upload your Year 5 report.</a><br><br>
 
 
            <hr style="margin: 30px 0;">
@@ -188,19 +169,16 @@
 
        
             <div class="govuk-details__text">
-              <p class="govuk-body"><strong>If you have questions about your application</strong>
-                <br><br>
-                If you have any questions about your application, call the RPA and follow the options for the Farming Transformation Fund scheme.
-              
-              
-              </p>
-              
-              
-              <p class="govuk-body">
+              <strong>If you have questions about your report</strong><br><br>
+              If you have any questions about your report, call the RPA and follow the options for the Farming Transformation Fund scheme.<br>
+
+
+
+               <p class="govuk-body">
                 <strong>Telephone</strong><br>
                 Telephone: 03000 200 301<br>
                 Monday to Friday, 8:30am to 5pm (except public holidays)<br>
-                <a href="/_common/not-testing.html">Find out about call charges (opens in a new tab)</a>
+                <a href="/_common/not-testing.html">Find out about call charges</a>
               </p>
 
               <p class="govuk-body"><strong>Email</strong><br>
