--- a/app/views/ftf/_includes/activity-list_task-section_monitoring-01.html
+++ b/app/views/ftf/_includes/activity-list_task-section_monitoring-01.html
@@ -6,6 +6,32 @@
   </h2>
   
   <ul class="govuk-task-list">
+    <li class="govuk-task-list__item">
+      <div class="govuk-task-list__name-and-hint">
+        <div>Add and upload reporting evidence</div>
+      </div>
+      <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="monitoring-01-2-status">
+        Cannot start yet
+      </div>
+    </li>
+
+    <li class="govuk-task-list__item">
+      <div class="govuk-task-list__name-and-hint">
+        <div>Submit reporting</div>
+      </div>
+      <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="monitoring-01-2-status">
+        Cannot start yet
+      </div>
+    </li>
+  </ul>
+
+
+  {% elif (data['monitoring-01'] == "02a") %}  <!-- Monitoring 01 Scenario 1 -->
+  <h2 class="govuk-prototype-kit-task-list__section">
+    <span class="govuk-prototype-kit-task-list__section-number">7. </span> Submit year 1 report
+  </h2>
+  
+  <ul class="govuk-task-list">
     <li class="govuk-task-list__item govuk-task-list__item--with-link">
       <div class="govuk-task-list__name-and-hint">
         <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="monitoring-01-1-status">Add and upload reporting evidence</a>
@@ -27,8 +53,7 @@
     </li>
   </ul>
 
-
-  {% elif (data['monitoring-01'] == "02a") %}  <!-- Monitoring 01 Scenario 2a -->
+  {% elif (data['monitoring-01'] == "02b") %}  <!-- Monitoring 01 Scenario 2a -->
   <h2 class="govuk-prototype-kit-task-list__section">
     <span class="govuk-prototype-kit-task-list__section-number">7. </span> Submit year 1 report
   </h2>
@@ -56,7 +81,7 @@
   </ul>
 
 
-  {% elif (data['monitoring-01'] == "02b") %}  <!-- Monitoring 01 Scenario 2b -->
+  {% elif (data['monitoring-01'] == "0c") %}  <!-- Monitoring 01 Scenario 2b -->
   <h2 class="govuk-prototype-kit-task-list__section">
     <span class="govuk-prototype-kit-task-list__section-number">7. </span> Submit year 1 report
   </h2>
