--- a/app/views/ftf/_includes/activity-list_task-section_monitoring-03.html
+++ b/app/views/ftf/_includes/activity-list_task-section_monitoring-03.html
@@ -6,6 +6,32 @@
     </h2>
     
     <ul class="govuk-task-list">
+      <li class="govuk-task-list__item">
+        <div class="govuk-task-list__name-and-hint">
+          <div>Add and upload reporting evidence</div>
+        </div>
+        <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="monitoring-03-1-status">
+          Cannot start yet
+        </div>
+      </li>
+  
+      <li class="govuk-task-list__item">
+        <div class="govuk-task-list__name-and-hint">
+          <div>Submit reporting</div>
+        </div>
+        <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="monitoring-03-2-status">
+          Cannot start yet
+        </div>
+      </li>
+    </ul>
+
+    
+    {% elif (data['monitoring-03'] == "02a") %}  <!-- Monitoring 03 Scenario 1 -->
+    <h2 class="govuk-prototype-kit-task-list__section">
+      <span class="govuk-prototype-kit-task-list__section-number">9. </span> Submit year 3 report
+    </h2>
+    
+    <ul class="govuk-task-list">
       <li class="govuk-task-list__item govuk-task-list__item--with-link">
         <div class="govuk-task-list__name-and-hint">
           <a class="govuk-link govuk-task-list__link" href="#" aria-describedby="monitoring-03-1-status">Add and upload reporting evidence</a>
@@ -26,9 +52,9 @@
         </div>
       </li>
     </ul>
-  
-  
-    {% elif (data['monitoring-03'] == "02a") %}  <!-- Monitoring 03 Scenario 2a -->
+    
+    
+    {% elif (data['monitoring-03'] == "02b") %}  <!-- Monitoring 03 Scenario 2a -->
     <h2 class="govuk-prototype-kit-task-list__section">
       <span class="govuk-prototype-kit-task-list__section-number">9. </span> Submit year 3 report
     </h2>
@@ -56,7 +82,7 @@
     </ul>
   
   
-    {% elif (data['monitoring-03'] == "02b") %}  <!-- Monitoring 03 Scenario 2b -->
+    {% elif (data['monitoring-03'] == "02c") %}  <!-- Monitoring 03 Scenario 2b -->
     <h2 class="govuk-prototype-kit-task-list__section">
       <span class="govuk-prototype-kit-task-list__section-number">9. </span> Submit year 3 report
     </h2>
