--- a/app/views/ftf/_includes/activity-list_task-section_monitoring-04.html
+++ b/app/views/ftf/_includes/activity-list_task-section_monitoring-04.html
@@ -1,6 +1,32 @@
 <li>
 
-    {% if (data['monitoring-04'] == "01") %}  <!-- Monitoring 04 Scenario 1 -->
+    {% if (data['monitoring-04'] == "01") %}  <!-- Monitoring 04 Scenario 01 -->
+    <h2 class="govuk-prototype-kit-task-list__section">
+      <span class="govuk-prototype-kit-task-list__section-number">10. </span> Submit year 4 report
+    </h2>
+    
+    <ul class="govuk-task-list">
+      <li class="govuk-task-list__item">
+        <div class="govuk-task-list__name-and-hint">
+          <div>Add and upload reporting evidence</div>
+        </div>
+        <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="monitoring-04-2-status">
+          Cannot start yet
+        </div>
+      </li>
+  
+      <li class="govuk-task-list__item">
+        <div class="govuk-task-list__name-and-hint">
+          <div>Submit reporting</div>
+        </div>
+        <div class="govuk-task-list__status govuk-task-list__status--cannot-start-yet" id="monitoring-04-2-status">
+          Cannot start yet
+        </div>
+      </li>
+    </ul>
+
+    
+    {% elif (data['monitoring-04'] == "02a") %}  <!-- Monitoring 04 Scenario 2a -->
     <h2 class="govuk-prototype-kit-task-list__section">
       <span class="govuk-prototype-kit-task-list__section-number">10. </span> Submit year 4 report
     </h2>
@@ -25,10 +51,9 @@
           Cannot start yet
         </div>
       </li>
-    </ul>
+    </ul>    
   
-  
-    {% elif (data['monitoring-04'] == "02a") %}  <!-- Monitoring 04 Scenario 2a -->
+    {% elif (data['monitoring-04'] == "02b") %}  <!-- Monitoring 04 Scenario 2b -->
     <h2 class="govuk-prototype-kit-task-list__section">
       <span class="govuk-prototype-kit-task-list__section-number">10. </span> Submit year 4 report
     </h2>
@@ -56,7 +81,7 @@
     </ul>
   
   
-    {% elif (data['monitoring-04'] == "02b") %}  <!-- Monitoring 04 Scenario 2b -->
+    {% elif (data['monitoring-04'] == "02c") %}  <!-- Monitoring 04 Scenario 2c -->
     <h2 class="govuk-prototype-kit-task-list__section">
       <span class="govuk-prototype-kit-task-list__section-number">10. </span> Submit year 4 report
     </h2>
